# fu540-pac

./: .travis.yml  Cargo.toml  README.md  fu540.svd  update.sh
.github/workflows/: ci.yaml
src/: lib.rs  msel.rs  prci.rs
src/msel/: msel.rs
src/prci/: clkmuxstatus.rs  coreclksel.rs  corepllcfg0.rs  ddrpllcfg0.rs  ddrpllcfg1.rs  devicesresetreg.rs  gemgxlpllcfg0.rs  gemgxlpllcfg1.rs  hfxosccfg.rs  procmoncfg.rs
src/uart0/: div.rs  ie.rs  ip.rs  rxctrl.rs  rxdata.rs  txctrl.rs  txdata.rs
