[package]
name = "fu540-pac"
version = "0.1.0"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for FU540 SoC"
keywords = ["no-std", "riscv", "register", "peripheral"]
license = "ISC"
edition = "2018"

[dependencies]
riscv = "0.6.0"
vcell = "0.1.3"
